examples/test/testpolicy13852.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13852
  namespace: namespace269
spec:
  podSelector:
    matchLabels:
      key20: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value43
      podSelector:
        matchLabels:
          key48: value38
          key14: value42
          key44: value38
